@@ -23,6 +23,7 @@ LOGGING-145 - LogFactoryImpl.setAttribute - possible NPE
 LOGGING-142 - Log4JLogger uses deprecated static members of Priority such as INFO
 LOGGING-128 - Static analysis suggests a number of potential improvements
 LOGGING-147 - SimpleLog.log - unsafe update of shortLogName
+LOGGING-148 - LogFactory.diagnosticPrefix and diagnosticsStream could be final
 
 $Id$
 
